--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,226 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+*, *:before, *:after {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	background-color: #201449;
+	color: #FFDB60;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+svg {
+	/* The svgs won't  change height or shape otherwise.
+	I didn't feel like  figuring out specific elements to target.*/
+	height: 30px !important;
+	width: 30px !important;
+	vertical-align: middle;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+input {
+	vertical-align: middle;
+	border: 3px solid #FFDB60;
+	padding: 5px 10px;
+	border-radius: 5px;
+	margin-right: 10px;
+	background-color: #201449;
+	color: #FFDB60;
+}
+
+input:focus {
+	border: 3px dashed #FFDB60;
+	outline: none;
+}
+
+input[type="range"] {
+	height: 5px;
+	padding: 0 30px;
+	appearance: none;
+	background-color: #FFDB60;
+}
+
+input[type="range"]::-moz-range-thumb {
+	appearance: none;
+	width: 20px;
+	height: 20px;
+	background-color: #201449;
+	border: 2px solid #FFDB60;
+	border-radius: 50%;
+}
+
+select {
+	border: 2px solid #FFDB60;
+	background-color: #201449;
+	color: #FFDB60;
+	border-radius: 5px;
+	padding: 5px;
+}
+
+.container {
+	display: grid;
+	grid-template-areas:
+		"navbar navbar navbar"
+		"main main main";
+	grid-template-columns: 1fr 1fr 1fr;
+}
+
+.navbar {
+	grid-area: navbar;
+	padding: 10px;
+}
+
+.navbar ul {
+	display: flex;
+	justify-content: space-between;
+	list-style: none;
+}
+
+main {
+	grid-area: main;
+	display: grid;
+	grid-template-areas:
+		"video-player video-player videos"
+		"played played videos";
+	grid-template-columns: 1fr 1fr 1fr;
+}
+
+.video-container {
+	grid-area: video-player;
+	position: relative;
+}
+
+video {
+	width: 90%;
+	height: 550px;
+}
+
+.video-controls {
+	padding: 10px;
+	width: 90%;
+	border: 2px solid #FFDB60;
+}
+
+.video-controls:fullscreen {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+
+
+.video-controls button {
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+}
+
+button svg {
+	color: #FFDB60;
+}
+
+.videos-container {
+	grid-area: videos;
+	overflow: auto;
+	max-height: 90vh;
+	grid-gap: 10px;
+	justify-content: center;
+	margin-top: 83px;
+	padding: 20px;
+	border: 2px solid #FFDB60;
+	border-radius: 5px;
+}
+
+.videos-container button {
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+}
+
+.videos-container:first-child {
+	margin-top: 0 !important;
+}
+
+.videos {
+	/*border: 2px solid #FFDB60;*/
+	border-radius: 5px;
+	padding: 10px;
+	margin-top: 20px;
+	cursor: pointer;
+}
+
+.videos:hover {
+	background-color: #5834CE;;
+	color: #FFDB60;
+}
+
+.played-container {
+	grid-area: played;
+	display: flex;
+	overflow: auto;
+	max-width: 60vw;
+	height: auto;
+	grid-gap: 10px;
+}
+
+.played-container .videos {
+	border: 2px solid #FFDB60;
+}
+
+.played-container button {
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+}
+
+.played-container .played {
+	border-radius: 5px;
+	height: 150px;
+	padding: 10px;
+	cursor: pointer;
+}
+
+
+.played:hover {
+	background-color: #5834CE;;
+	color: #FFDB60;
+}
+
+.filter {
+	margin: 20px;
+}
+
+.filter label {
+	margin-right: 20px;
+}
+
+
+/* For Safari */
+@supports not (scrollbar-width: thin) {
+	svg {
+		height: 48px !important;
+		width: 48px !important;
+	}
+
+	.videos-container {
+		max-height: 65vh;
+	}
+
+	.video-controls {
+		padding: 10px;
+		width: 100%;
+		border: 2px solid #FFDB60;
+	}
+
+	.filter {
+		margin-top: 20px;
+		margin-left: 20px;
+		font-size: 32px;
+	}
+
+	.filter select {
+		font-size: 20px;
+	}
+
+	video {
+		width: 100%;
+	}
 }
